@@ -2,7 +2,9 @@ AC_INIT([libepc], [0.1], [mathias@openismus.com])
 AM_INIT_AUTOMAKE([-Wall dist-bzip2 subdir-objects])
 
 AC_CONFIG_HEADER([config.h])
-AC_CONFIG_FILES([Makefile docs/reference/libepc/Makefile libepc.pc])
+AC_CONFIG_FILES([
+  Makefile docs/reference/libepc/Makefile
+  libepc.pc libepc-ui.pc])
 
 AC_PROG_CC
 AM_PROG_CC_C_O
@@ -12,6 +14,7 @@ GTK_DOC_CHECK([1.4])
 
 PKG_PROG_PKG_CONFIG([0.14])
 PKG_CHECK_MODULES(LIBEPC, [avahi-client avahi-glib libsoup-2.2])
+PKG_CHECK_MODULES(LIBEPC_UI, [gtk+-2.0])
 PKG_CHECK_MODULES(AVAHIUI, [avahi-ui])
 
 GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`
