@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=${prefix}
+libdir=${exec_prefix}/lib
+includedir=${prefix}/include
+
+Name: Easy Publish and Consume Widgets
+Description: widgets for the Easy Publish and Consume Library
+Version: @VERSION@
+Requires: gtk+-2.0
+Cflags: -I${includedir}/libepc-ui
+Libs: -L${libdir} -lepc-ui
+
