@@ -1,0 +1,4 @@
+*.o
+*.l[ao]
+*.l[ao]T
+.dirstamp
